updated code for enrolees for next quarter